expanded navbar on small screen fixed

--- a/src/style.css
+++ b/src/style.css
@@ -35,4 +35,6 @@
         }
       }
       
+      .navbar-toggler {
+        --bs-navbar-toggler-border-radius: 0rem; }
       
